@@ -9,6 +9,7 @@ export(addDivergence)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
+export(addTaxonomyTree)
 export(agglomerateByPrevalence)
 export(agglomerateByRank)
 export(bestDMNFit)
@@ -19,6 +20,7 @@ export(calculateJSD)
 export(calculateNMDS)
 export(calculateOverlap)
 export(calculateUnifrac)
+export(cluster)
 export(countDominantFeatures)
 export(countDominantTaxa)
 export(estimateDivergence)
@@ -97,6 +99,7 @@ export(subsetByRareTaxa)
 export(subsetFeatures)
 export(subsetSamples)
 export(subsetTaxa)
+export(taxonomyTree)
 export(testExperimentCrossAssociation)
 export(testExperimentCrossCorrelation)
 export(transformAssay)
