@@ -1,8 +1,7 @@
 #' Agglomerate data using taxonomic information
 #'
-#' \code{agglomerateByRank} can be used to sum up data based on associations
-#' with certain taxonomic ranks, as defined in \code{rowData}. Only available
-#' \code{\link{taxonomyRanks}} can be used.
+#' Agglomeration functions can be used to sum-up data based on specific criteria 
+#' such as taxonomic ranks, variables or prevalence.
 #'
 #' @param x a
 #'   \code{\link[SummarizedExperiment:SummarizedExperiment-class]{SummarizedExperiment}}
@@ -32,7 +31,9 @@
 #'
 #' @param ... arguments passed to \code{agglomerateByRank} function for
 #'   \code{SummarizedExperiment} objects,
-#'   \code{\link[=merge-methods]{mergeRows}} and
+#'   to \code{getPrevalence} and \code{getPrevalentTaxa} and used in 
+#'   \code{agglomeratebyPrevalence},
+#'   to \code{\link[=merge-methods]{mergeRows}} and
 #'   \code{\link[scuttle:sumCountsAcrossFeatures]{sumCountsAcrossFeatures}}.
 #'   \itemize{
 #'        \item{\code{remove_empty_ranks}}{A single boolean value for selecting 
@@ -40,6 +41,15 @@
 #'        agglomeration. (By default: \code{remove_empty_ranks = FALSE})}
 #'        \item{\code{make_unique}}{A single boolean value for selecting 
 #'        whether to make rownames unique. (By default: \code{make_unique = TRUE})}
+#'        \item{\code{detection}}{Detection threshold for absence/presence. 
+#'        Either an absolute value compared directly to the values of \code{x} 
+#'        or a relative value between 0 and 1, if \code{as_relative = FALSE}.}
+#'        \item{\code{prevalence}}{Prevalence threshold (in 0 to 1). The 
+#'        required prevalence is strictly greater by default. To include the 
+#'        limit, set \code{include_lowest} to \code{TRUE}.}
+#'        \item{\code{as.relative}}{Logical scalar: Should the detection 
+#'        threshold be applied on compositional (relative) abundances? 
+#'        (default: \code{FALSE})}
 #'    }
 #'
 #' @param altexp String or integer scalar specifying an alternative experiment
@@ -62,8 +72,9 @@
 #' can produce meaningless values. In those cases, consider performing agglomeration
 #' first, and then applying the transformation afterwards.
 #'
-#' @return A taxonomically-agglomerated, optionally-pruned object of the same
-#'   class as \code{x}.
+#' @return 
+#' \code{agglomerateByRank} returns a taxonomically-agglomerated, 
+#'   optionally-pruned object of the same class as \code{x}.
 #'
 #' @name agglomerate-methods
 #' @seealso
