@@ -28,9 +28,6 @@
 #'   assay to use for calculation.
 #'   (Please use \code{assay.type} instead. At some point \code{assay_name}
 #'   will be disabled.)
-#'
-#' @param other_label A single \code{character} valued used as the label for the
-#'   summary of non-prevalent taxa. (default: \code{other_label = "Other"})
 #'   
 #' @param rank a single character defining a taxonomic rank. Must be a value of
 #'   \code{taxonomyRanks()} function.
@@ -175,12 +172,6 @@
 #' data(esophagus)
 #' getPrevalentAbundance(esophagus, assay.type = "counts")
 #'
-#' # data can be aggregated based on prevalent taxonomic results
-#' agglomerateByPrevalence(tse,
-#'                         rank = "Phylum",
-#'                         detection = 1/100,
-#'                         prevalence = 50/100,
-#'                         as_relative = TRUE)
 NULL
 
 #' @rdname getPrevalence
@@ -594,23 +585,48 @@ setMethod("getPrevalentAbundance", signature = c(x = "SummarizedExperiment"),
 
 ############################# agglomerateByPrevalence ##########################
 
-#' @rdname getPrevalence
-#' @aliases mergeFeaturesByPrevalence
+#' @rdname agglomerate-methods
+#' 
+#' @param other_label A single \code{character} valued used as the label for the
+#'   summary of non-prevalent taxa. (default: \code{other_label = "Other"})
+#' 
+#' @details
+#' \code{agglomerateByPrevalence} sums up the values of assays at the taxonomic 
+#' level specified by \code{rank} (by default the highest taxonomic level 
+#' available) and selects the summed results that exceed the given population 
+#' prevalence at the given detection level. The other summed values (below the 
+#' threshold) are agglomerated in an additional row taking the name indicated by
+#' \code{other_label} (by default "Other").
+#' 
+#' @return 
+#' \code{agglomerateByPrevalence} returns a taxonomically-agglomerated object
+#' of the same class as x and based on prevalent taxonomic results.
+#' 
+#' @examples
+#' ## Data can be aggregated based on prevalent taxonomic results
+#' tse <- GlobalPatterns
+#' tse <- agglomerateByPrevalence(tse,
+#'                               rank = "Phylum",
+#'                               detection = 1/100,
+#'                               prevalence = 50/100,
+#'                               as_relative = TRUE)
+#' 
+#' tse
+#' 
+#' # Here data is aggregated at the taxonomic level "Phylum". The five phyla
+#' # that exceed the population prevalence threshold of 50/100 represent the 
+#' # five first rows of the assay in the aggregated data. The sixth and last row
+#' # named by default "Other" takes the summed up values of all the other phyla 
+#' # that are below the prevalence threshold.
+#' 
+#' assay(tse)[,1:5]
+#' 
 #' @export
 setGeneric("agglomerateByPrevalence", signature = "x",
            function(x, ...)
                standardGeneric("agglomerateByPrevalence"))
 
-#' @rdname getPrevalence
-#' @aliases agglomerateByPrevalence
-#' @export
-setGeneric("mergeFeaturesByPrevalence", signature = "x",
-           function(x, ...)
-               standardGeneric("mergeFeaturesByPrevalence"))
-
-
-#' @rdname getPrevalence
-#' @aliases mergeFeaturesByPrevalence
+#' @rdname agglomerate-methods
 #' @export
 setMethod("agglomerateByPrevalence", signature = c(x = "SummarizedExperiment"),
     function(x, rank = taxonomyRanks(x)[1L], other_label = "Other", ...){
@@ -650,15 +666,3 @@ setMethod("agglomerateByPrevalence", signature = c(x = "SummarizedExperiment"),
         x
     }
 )
-
-
-#' @rdname getPrevalence
-#' @aliases agglomerateByPrevalence
-#' @export
-setMethod("mergeFeaturesByPrevalence", signature = c(x = "SummarizedExperiment"),
-          function(x, rank = taxonomyRanks(x)[1L], other_label = "Other", ...){
-              .Deprecated(old="agglomerateByPrevalence", new="mergeFeaturesByPrevalence", "Now agglomerateByPrevalence is deprecated. Use mergeFeaturesByPrevalence instead.")
-              x <- agglomerateByPrevalence(x, rank = rank, other_label = other_label, ...)
-              x 
-          })
-
