@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/agglomerate.R
+% Please edit documentation in R/agglomerate.R, R/getPrevalence.R
 \name{agglomerate-methods}
 \alias{agglomerate-methods}
 \alias{agglomerateByRank}
@@ -10,6 +10,8 @@
 \alias{mergeFeaturesByRank,SingleCellExperiment-method}
 \alias{agglomerateByRank,TreeSummarizedExperiment-method}
 \alias{mergeFeaturesByRank,TreeSummarizedExperiment-method}
+\alias{agglomerateByPrevalence}
+\alias{agglomerateByPrevalence,SummarizedExperiment-method}
 \title{Agglomerate data using taxonomic information}
 \usage{
 agglomerateByRank(x, ...)
@@ -46,6 +48,15 @@ mergeFeaturesByRank(x, ...)
 )
 
 \S4method{mergeFeaturesByRank}{TreeSummarizedExperiment}(x, ..., agglomerate.tree = FALSE)
+
+agglomerateByPrevalence(x, ...)
+
+\S4method{agglomerateByPrevalence}{SummarizedExperiment}(
+  x,
+  rank = taxonomyRanks(x)[1L],
+  other_label = "Other",
+  ...
+)
 }
 \arguments{
 \item{x}{a
@@ -54,7 +65,9 @@ object}
 
 \item{...}{arguments passed to \code{agglomerateByRank} function for
 \code{SummarizedExperiment} objects,
-\code{\link[=merge-methods]{mergeRows}} and
+to \code{getPrevalence} and \code{getPrevalentTaxa} and used in
+\code{agglomeratebyPrevalence},
+to \code{\link[=merge-methods]{mergeRows}} and
 \code{\link[scuttle:sumCountsAcrossFeatures]{sumCountsAcrossFeatures}}.
 \itemize{
 \item{\code{remove_empty_ranks}}{A single boolean value for selecting
@@ -62,6 +75,15 @@ whether to remove those columns of rowData that include only NAs after
 agglomeration. (By default: \code{remove_empty_ranks = FALSE})}
 \item{\code{make_unique}}{A single boolean value for selecting
 whether to make rownames unique. (By default: \code{make_unique = TRUE})}
+\item{\code{detection}}{Detection threshold for absence/presence.
+Either an absolute value compared directly to the values of \code{x}
+or a relative value between 0 and 1, if \code{as_relative = FALSE}.}
+\item{\code{prevalence}}{Prevalence threshold (in 0 to 1). The
+required prevalence is strictly greater by default. To include the
+limit, set \code{include_lowest} to \code{TRUE}.}
+\item{\code{as.relative}}{Logical scalar: Should the detection
+threshold be applied on compositional (relative) abundances?
+(default: \code{FALSE})}
 }}
 
 \item{rank}{a single character defining a taxonomic rank. Must be a value of
@@ -93,15 +115,20 @@ nested alternative experiments by default (default:
 \code{agglomerate.tree = FALSE})}
 
 \item{agglomerateTree}{alias for \code{agglomerate.tree}.}
+
+\item{other_label}{A single \code{character} valued used as the label for the
+summary of non-prevalent taxa. (default: \code{other_label = "Other"})}
 }
 \value{
-A taxonomically-agglomerated, optionally-pruned object of the same
-class as \code{x}.
+\code{agglomerateByRank} returns a taxonomically-agglomerated,
+optionally-pruned object of the same class as \code{x}.
+
+\code{agglomerateByPrevalence} returns a taxonomically-agglomerated object
+of the same class as x and based on prevalent taxonomic results.
 }
 \description{
-\code{agglomerateByRank} can be used to sum up data based on associations
-with certain taxonomic ranks, as defined in \code{rowData}. Only available
-\code{\link{taxonomyRanks}} can be used.
+Agglomeration functions can be used to sum-up data based on specific criteria
+such as taxonomic ranks, variables or prevalence.
 }
 \details{
 Depending on the available taxonomic data and its structure, setting
@@ -114,6 +141,13 @@ Agglomeration sums up the values of assays at the specified taxonomic level. Wit
 certain assays, e.g. those that include binary or negative values, this summing
 can produce meaningless values. In those cases, consider performing agglomeration
 first, and then applying the transformation afterwards.
+
+\code{agglomerateByPrevalence} sums up the values of assays at the taxonomic
+level specified by \code{rank} (by default the highest taxonomic level
+available) and selects the summed results that exceed the given population
+prevalence at the given detection level. The other summed values (below the
+threshold) are agglomerated in an additional row taking the name indicated by
+\code{other_label} (by default "Other").
 }
 \examples{
 data(GlobalPatterns)
@@ -175,6 +209,24 @@ data(enterotype)
 ## Print the available taxonomic ranks. Shows only 1 available rank,
 ## not useful for agglomerateByRank
 taxonomyRanks(enterotype)
+## Data can be aggregated based on prevalent taxonomic results
+tse <- GlobalPatterns
+tse <- agglomerateByPrevalence(tse,
+                              rank = "Phylum",
+                              detection = 1/100,
+                              prevalence = 50/100,
+                              as_relative = TRUE)
+
+tse
+
+# Here data is aggregated at the taxonomic level "Phylum". The five phyla
+# that exceed the population prevalence threshold of 50/100 represent the 
+# five first rows of the assay in the aggregated data. The sixth and last row
+# named by default "Other" takes the summed up values of all the other phyla 
+# that are below the prevalence threshold.
+
+assay(tse)[,1:5]
+
 }
 \seealso{
 \code{\link[=merge-methods]{mergeRows}},
